--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ img{display: block;}
 .header{
   border-bottom: 1px solid  var(--header-border);
 }
+
 .header .container{
   display: flex;
   align-items: center;
@@ -122,8 +123,17 @@ margin-right: 50px;
   margin: 0px auto 30px;
 }
 .hero-section{
-background-color: var(--bg-section-color); 
-padding: 200px 0px;
+  background-color: var(--bg-section-color); 
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                                  rgba(47, 48, 58, 0.4)) ,
+                    url(../images/hero-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover ;
+  background-position: center;
+
+  max-width: 1600px;
+  margin: 0auto;
+  padding: 200px 0px;
 }
 .hero-section .container{
   text-align: center;
