--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,14 @@ margin-right: 50px;
   margin-left: auto;
 }
 .auth-nav-link {
-  color: inherit;
+  color: var(--secondary-text-color);
+  display: flex;
+  align-items: center;
+  fill: currentColor;
+}
+.auth-nav-icon {
+margin-right: 10px;
+/* fill: var(--secondary-text-color); */
 }
 .auth-nav-link:hover,
 .auth-nav-link:focus {
