--- a/css/styles.css
+++ b/css/styles.css
@@ -287,10 +287,10 @@ flex-basis: calc((100% - 90px) / 4);
   color: var(--text-overall-color);
 }
 
-.soc-icon {
+/* .soc-icon {
   width: 20px;
   height: 20px;
-}
+} */
 /* *****************      client    ********************** */
 .client-list {
   display: flex;
@@ -317,11 +317,11 @@ flex-basis: calc((100% - 90px) / 4);
   color: var(--accent-color);
   border-color: var(--accent-color);
 }
-.client-icon {
+/* .client-icon {
   width: 106px;
   height: 60px;
   
-}
+} */
 /* ****************************footer***************************************** */
 .foot {
   color: var(--text-overall-color);
@@ -345,12 +345,38 @@ flex-basis: calc((100% - 90px) / 4);
   background-color: var(--bg-section-color); 
   padding: 60px 0;
 }
+.footer .container{
+  display: flex;
+  align-items: baseline;
+}
 .address-link:hover,
 .address-link:focus{
   color: var(--accent-color);
 }
 .foot-addres-item:not(:last-child){
 margin-bottom:9px;
+}
+.address-box{
+  flex-basis: calc(23%);
+}
+.join-box{
+  margin-left: 30px;
+}
+.join-box .soc-icon-area{
+  color: var(--text-overall-color);
+ }
+.box-area-color {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.join-box .title{
+  text-transform: uppercase;
+  color: var(--text-overall-color);
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;;
+  letter-spacing: 0.03em;
 }
 /* ***********************************portfolio************************************************ */
 
@@ -382,14 +408,15 @@ margin-bottom:9px;
 .portfolio-btn:focus {
   color: var(--text-overall-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 /* ****************works list**************** */
 .works-list{
   display: flex;
   flex-wrap: wrap;
-  /* margin-left: -30px;
-  margin-bottom: -30px; */
-
+  
 }
 .works-list-item{
   
@@ -397,6 +424,7 @@ margin-bottom:9px;
   flex-basis: calc((100% - 60px) / 3);
   margin-right:30px;
   margin-bottom: 30px;
+  display: flex;
   }
   .works-list-item:nth-child(3n){
     margin-right: 0;
@@ -404,7 +432,17 @@ margin-bottom:9px;
   .works-list-item:nth-last-child(-n+3){
     margin-bottom: 0;
   }
+.works-item-link{
+  color: inherit;
+  text-decoration: none;
+    
+}
 
+.works-item-link:hover{
+box-shadow: 0px 1px 1px rgb(0 0 0 / 12%),
+0px 4px 4px rgb(0 0 0 / 6%),
+1px 4px 6px rgb(0 0 0 / 16%);
+}
 .works-title-container {
   padding: 20px 24px;
   border-left: 1px solid  var(--works-title-border) ;
